# ding

./: Cargo.toml  PLAN.md  README.md  build.rs  justfile
assets/brands/: SOURCES.md
assets/brands/anthropic/claude/icons/: claude-symbol-clay.icns  claude-symbol-ivory.icns
assets/brands/openai/icons/: openai-blossom-light.icns
docs/: USAGE_GUIDE.md
docs/implementation/: remote-provider-plan.md  sources-and-click-handling-plan.md  telegram-provider-plan.md
docs/integrations/: claude-codex-integration-spec.md
docs/research/: claude-codex-hooks-research.md
objc/: notifier.m
src/: cli.rs  config.rs  context.rs  error.rs  main.rs  notification.rs  payload.rs  remote.rs
src/provider/: macos.rs  mod.rs  telegram.rs
