[package]
name = "ding"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
thiserror = "1.0.69"
toml = "0.8.19"
toml_edit = "0.22.27"
libc = "0.2.178"
tiny_http = "0.12.0"
ureq = { version = "2.12.1", features = ["json"] }

